<resources>
    <string name="app_name">BeatZone</string>
    <string name="title_activity_bt">BTActivity</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="label_data">Data:</string>
    <string name="no_data">No data</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="action_signin">Sign in</string>
    <string name="action_settings">Settings...</string>

    <string name="back_button">Voltar</string>

    <string name="title_login">Login utilizando:</string>
    <string name="button_cancel">Cancelar</string>

    <string name="sign_in_activiy">Sign in</string>
    <string name="sign_in_google_activiy">Sign in Google</string>
    <string name="google_signin_title_text">Google Sign-In</string>
    <string name="signed_out">Signed out</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_signin_revoke">Revoke</string>

    <string name="signed_in_fmt">Signed user:</string>
    <string name="loading">Loading…</string>

    <!-- UserParamsActivity -->
    <string name="userparams_activity">UserParamsActivity</string>
    <string name="userparams_title_profile">User Profile</string>
    <string name="userparams_user_name">Name:</string>
    <string name="userparams_user_email">Email:</string>
    <string name="userparams_title_char">User Characteristics</string>
    <string name="userparams_user_age">Age:</string>
    <string name="userparams_user_height">Height (cm):</string>
    <string name="userparams_user_weight">Weight (kg):</string>
    <string name="userparams_back">Back</string>
    <string name="userparams_sync">Sync</string>
    <string name="userparams_save_device">Save</string>
</resources>
