<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TableLayout
        android:id="@+id/userparams_table_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView
                android:text="@string/userparams_title_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_title_profile_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:gravity="center"
                android:padding="3dip"
                android:layout_span="2"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/userparams_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_user_name_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:padding="3dip"
                />
            <EditText
                android:id="@+id/userparams_user_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/userparams_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_user_email_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:padding="3dip"
                />
            <EditText
                android:id="@+id/userparams_user_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/userparams_title_char"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_title_char_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Large"
                android:gravity="center"
                android:padding="3dip"
                android:layout_span="2"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/userparams_user_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_user_age_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:padding="3dip"
                />
            <EditText
                android:id="@+id/userparams_user_age_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/userparams_user_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_user_height_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:padding="3dip"
                />
            <EditText
                android:id="@+id/userparams_user_height_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/userparams_user_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/userparams_user_weight_lbl"
                android:layout_weight="1"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:padding="3dip"
                />
            <EditText
                android:id="@+id/userparams_user_weight_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dip"
                />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userparams_table_layout"
        android:layout_alignParentBottom="true">
        <Button
            android:id="@+id/userparams_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userparams_back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:drawableStart="@drawable/ic_arrow_back_black_24dp"
            />
        <Button
            android:id="@+id/userparams_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userparams_save_device"
            android:layout_alignParentBottom="true"
            android:drawableStart="@drawable/ic_stay_save_on_device_24px"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/userparams_sync_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userparams_sync"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/ic_sync_black_cloud_24dp"
            />
    </RelativeLayout>

</RelativeLayout>
